--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 {% for post in site.posts limit: 4 %}
-  <div class="well">
+  <div class="well index">
+    <div class="date index">
+      {{ post.date | date: "%d %B %Y" }}
+    </div>
     <h1>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <small>{{ post.date | date: "%d %B %Y" }}</small>
     </h1>
     <p>{{ post.summary }}</p>
     <a href="{{ post.url }}">More &rarr;</a>
