--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 {% for post in site.posts limit: 4 %}
-  <div class="well index">
+  <div class="index">
     <div class="date index">
       {{ post.date | date: "%d %B %Y" }}
     </div>
-    <h1>
+    <h1 class="headline">
       <a href="{{ post.url }}">{{ post.title }}</a>
     </h1>
     <p>{{ post.summary }}</p>
