--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-{% for post in site.posts limit: 4 %}
-  <div class="index">
+{% for post in site.posts %}
+<div class="row">
+  <div class="index col-lg-10">
     <div class="date">
       {{ post.date | date: "%d %B %Y" }}
     </div>
@@ -11,4 +12,8 @@ layout: default
     </h3>
     <p>{{ post.summary }}</p>
   </div>
+  <div class="col-lg-2 index">
+    <img src="/assets/{{ post.date | date: '%d_%m_%Y' }}_image.jpg" class="img-rounded pull-right headline" />
+  </div>
+</div>
 {% endfor %}
