Temporarily remove pictures from post headline

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: default
     </h3>
     <p>{{ post.summary }}</p>
   </div>
-  <div class="col-lg-2 index">
-    <img src="/assets/{{ post.date | date: '%d_%m_%Y' }}_image.jpg" class="img-rounded pull-right headline" />
-  </div>
+  <!-- <div class="col-lg-2 index">
+  <img src="/assets/{{ post.date | date: '%d_%m_%Y' }}_image.jpg" class="img-rounded pull-right headline" />
+  </div> -->
 </div>
 {% endfor %}
